--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "body-parse": "^0.1.0",
     "cors": "^2.8.5",
-    "express": "^4.18.0",
+    "express": "^4.18.1",
     "mongoose": "^6.3.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.16"
   },
   "scripts": {
     "start": "nodemon index.ts"
@@ -14,9 +13,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/mongoose": "^5.11.97",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3"
+    "@types/node": "*",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   },
   "name": "node_mono",
   "version": "1.0.0",
