--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
-    "nodemon": "^2.0.16"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "nodemon index.ts"
@@ -15,7 +17,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "*",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
