--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "*",
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.6.4"
   },
   "name": "node_mono",
