--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.16",
     "twilio": "^3.77.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "node dist/index.js",
+	"dev": "nodemon src/index.ts",
+	"build": "tsc -p .",
+	"postinstall": "pnpm run build"
+  },
+  "engines": {
+	  "node": "18.1.0",
+	  "pnpm": "7.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -26,11 +32,12 @@
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+	"nodemon": "^2.0.16"
   },
   "name": "node_mono",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/saifali96/node_mono.git",
   "author": "Saif Ali <Saifincreation@gmail.com>",
   "license": "MIT",
