--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "start": "node dist/index.js",
 	"dev": "nodemon src/index.ts",
 	"build": "tsc -p .",
-	"postinstall": "pnpm run build"
+	"postinstall": "npm run build"
   },
   "engines": {
 	  "node": "18.1.0",
-	  "pnpm": "7.0.0"
+	  "npm": "8.8.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
